[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/PlayerBody.gd" type="Script" id=1]
[ext_resource path="res://Sprites/crosshair.png" type="Texture" id=2]

[node name="PlayerBody" type="RigidBody2D" groups=["Knockback", "Player"]]
mass = 1.5
gravity_scale = 12.0
contacts_reported = 4
contact_monitor = true
script = ExtResource( 1 )

[node name="SpritePoly" type="Polygon2D" parent="."]
position = Vector2( -6, 11 )
scale = Vector2( 2.53846, 2.53846 )
polygon = PoolVector2Array( -3.9394, 6.30303, 9.45455, 6.30303, 15.3636, 0.393939, 15.3636, -9.06061, 9.06061, -16.1515, -3.54546, -16.1515, -10.2424, -9.45455, -10.2424, 0 )

[node name="Wing" type="Polygon2D" parent="SpritePoly"]
color = Color( 0.411765, 0.411765, 0.411765, 1 )
polygon = PoolVector2Array( -4, -9, -7, -7, -11, -6, -6, -6, -4, -8 )

[node name="Eye" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 2.36364, 1.57576 )
color = Color( 0.411765, 0.411765, 0.411765, 1 )
polygon = PoolVector2Array( 2, -17, 4, -17, 4, -15, 2, -15 )

[node name="Beak" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 0.787879, 0.787879 )
color = Color( 0.976471, 0.603922, 0.0745098, 1 )
polygon = PoolVector2Array( 8, -16, 11, -18, 14, -18, 12.2121, -15.7576, 9.45455, -14.5758 )

[node name="Gobble" type="Polygon2D" parent="SpritePoly"]
position = Vector2( 1.9697, 3.15152 )
color = Color( 0.976471, 0.0745098, 0.0745098, 1 )
polygon = PoolVector2Array( 8, -17, 11.4242, -18.5152, 12.6061, -16.9394, 12.2121, -14.5758, 9.45455, -14.9697 )

[node name="Mohawk" type="Polygon2D" parent="SpritePoly"]
position = Vector2( -9.45455, -1.18182 )
color = Color( 0.976471, 0.0745098, 0.0745098, 1 )
polygon = PoolVector2Array( 7.24242, -17.8788, 11.9697, -19.8485, 14.3333, -17.4849, 13, -15, 9.21212, -15.5152, 6.0606, -15.1212 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 2.98611, 3.125 )
polygon = PoolVector2Array( 11.0512, -3.84, 11.0512, 3.84, 6.02791, 8.64, -5.35814, 8.64, -10.7163, 3.52, -10.7163, -4.16, -5.02326, -9.6, 5.35814, -9.6 )

[node name="RotPoint" type="Position2D" parent="."]
visible = false

[node name="BombGraphic" type="Polygon2D" parent="RotPoint"]
visible = false
color = Color( 0.0705882, 0.105882, 0.384314, 1 )
polygon = PoolVector2Array( -4, 10, -8, 7, -10, 2, -9, -3, -7, -6, -3, -9, -3, -13, 2, -14, 2, -9, 7, -7, 9, -3, 10, 3, 8, 6, 5, 9, 1, 10 )

[node name="Fuse" type="Polygon2D" parent="RotPoint/BombGraphic"]
color = Color( 0.776471, 0.776471, 0.776471, 1 )
polygon = PoolVector2Array( -1, -13, -1, -16, -4, -20, -2, -22, 1, -17, 1, -13 )

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="AimPointHolder" type="Node2D" parent="."]

[node name="AimPoint" type="Position2D" parent="AimPointHolder"]
visible = false
position = Vector2( 85, -63 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="AimPointHolder/AimPoint"]
texture = ExtResource( 2 )

[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
